deleted:    .idea/codeStyleSettings.xml 	new file:   .idea/encodings.xml 	modified:   .idea/libraries/appcompat_v7_23_1_1.xml 	modified:   .idea/libraries/design_23_1_1.xml 	modified:   .idea/libraries/recyclerview_v7_23_1_1.xml 	modified:   .idea/libraries/support_annotations_23_1_1.xml 	modified:   .idea/libraries/support_v4_23_1_1.xml 	modified:   .idea/misc.xml 	modified:   .idea/workspace.xml 	new file:   app/src/main/java/softdev1/medll/ExpandableListAdapter.java 	new file:   app/src/main/java/softdev1/medll/JSONData.java 	modified:   app/src/main/java/softdev1/medll/LeitlinieMain.java 	modified:   app/src/main/res/layout/activity_leitlinie_main.xml 	new file:   app/src/main/res/layout/expandable_list.xml 	new file:   app/src/main/res/layout/expandable_list_group.xml 	new file:   app/src/main/res/layout/expandable_list_textitem.xml 	new file:   app/src/main/res/xml-entwurf-fachmodell.xml

--- a/app/src/main/res/layout/activity_leitlinie_main.xml
+++ b/app/src/main/res/layout/activity_leitlinie_main.xml
@@ -15,7 +15,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_leitlinie_main" />
+    <include layout="@layout/expandable_list" />
 
 
 </android.support.design.widget.CoordinatorLayout>
