--- a/app/src/main/res/layout/activity_leitlinie_main.xml
+++ b/app/src/main/res/layout/activity_leitlinie_main.xml
@@ -15,7 +15,20 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/expandable_list" />
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="NLevelExpandable ListView" />
 
+    <ListView
+        android:id="@+id/listView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_below="@+id/textView1" >
+
+    </ListView>
+    <include layout="@layout/content_leitlinie_main"/>
 
 </android.support.design.widget.CoordinatorLayout>
