--- a/app/src/main/res/layout/expandable_list_group.xml
+++ b/app/src/main/res/layout/expandable_list_group.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<<<<<<< HEAD
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -8,27 +7,10 @@
     android:padding="10dp" >
 
     <TextView
-        android:id="@+id/group_name"
+        android:id="@+id/chapter_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="25sp"
-        android:textSize="25sp"/>
-=======
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp"
-    android:background="#000000">
-
-
-    <TextView
-        android:id="@+id/lblListHeader"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textSize="17dp"
-        android:textColor="#f9f93d" />
->>>>>>> 04581527e28b284deb14f4ba5b5e47b61fbd4dcb
+        android:paddingLeft="25dp"
+        android:textSize="25dp" />
 
 </LinearLayout>
