new file:   .idea/inspectionProfiles/Project_Default.xml 	new file:   .idea/inspectionProfiles/profiles_settings.xml 	new file:   .idea/libraries/universal_image_loader_1_9_5.xml 	modified:   .idea/workspace.xml 	modified:   app/app.iml 	modified:   app/build.gradle 	new file:   app/src/libs/universal-image-loader-1.9.5.jar 	new file:   app/src/main/java/softdev1/medll/ExpandListAdapter.java 	modified:   app/src/main/java/softdev1/medll/ExpandableListApplication.java 	modified:   app/src/main/java/softdev1/medll/Leitlinie.java 	modified:   app/src/main/java/softdev1/medll/LeitlinieMain.java 	modified:   app/src/main/java/softdev1/medll/NLevelAdapter.java 	new file:   app/src/main/res/drawable/Thumbs.db 	modified:   app/src/main/res/layout/activity_leitlinie_main.xml 	modified:   app/src/main/res/layout/content_leitlinie_main.xml 	modified:   app/src/main/res/layout/expandable_list.xml 	modified:   app/src/main/res/layout/expandable_list_textitem.xml

--- a/app/src/main/res/layout/activity_leitlinie_main.xml
+++ b/app/src/main/res/layout/activity_leitlinie_main.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent" android:fitsSystemWindows="true"
     tools:context=".LeitlinieMain">
 
-    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
@@ -15,20 +17,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="NLevelExpandable ListView" />
-
-    <ListView
-        android:id="@+id/listView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1" >
-
-    </ListView>
+   <include layout="@layout/expandable_list"/>
     <include layout="@layout/content_leitlinie_main"/>
 
 </android.support.design.widget.CoordinatorLayout>
