--- a/app/src/main/res/layout/expandable_list.xml
+++ b/app/src/main/res/layout/expandable_list.xml
@@ -7,5 +7,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/expandableListView" />
-    <include layout="@layout/content_leitlinie_main" />
+    <ListView
+        android:id="@+id/listView1"
+        android:layout_marginTop="60dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
 </LinearLayout>
